# collector

./: 404.html  Cargo.toml  Containerfile  Dockerfile.collector  Dockerfile.nri-init  Dockerfile.nri-init-test  README.md  facebook-resctrl-demo.md  index.html  issue-259.md  issue-merge-mock-fs.md  issue-refactor-ci.md  sitemap.xml
.devcontainer/: Containerfile
.github/workflows/: benchmark-sync-timers.yml  benchmark.yaml  build-collector.yaml  build-component-artifacts.yaml  check-resctrl-on-ghrunners.yaml  ci-fast.yaml  ci-orchestrator.yaml  ci.yaml  deploy-k3-environment.yaml  probe-resctrl-in-qemu.yaml  resctrl-demo.yaml  reusable-fast.yaml  reusable-helm-lint.yaml  reusable-rust-lint.yaml  reusable-test-collector.yaml  reusable-test-helm.yaml  reusable-test-multi-kernel-collector.yaml  (+14 more)
benchmark/: index.html
benchmarks/: metadata.txt
charts/: collector-0.1.0.tgz  collector-0.1.1.tgz  collector-0.1.2.tgz  collector-0.2.0.tgz  collector-0.3.0.tgz  index.yaml
collection/: index.html
crates/nri-init/: Cargo.toml
crates/nri-init/src/: cmd.rs  containerd.rs  detect.rs  error.rs  k3s.rs  lib.rs  opts.rs  toml_util.rs  verify.rs
crates/nri-init/tests/: containerd.rs  integration_sim.rs  k3s.rs
design/: index.html
devlog/: index.html
docs/: bpf-sync-timer.md  nri-resctrl-plugin.md  nri-setup.md
noise-generators/: index.html
s3-testing/: index.html
scratchpad/: issue-257.md  issue-258.md
scripts/: plot_cache_utilization_by_app.R  plot_contention_analysis.R  plot_instructions_vs_cpi.R  plot_memory_usage.R  plot_parquet.sh
search/: search_index.json
(+67 files in other folders)
